@@ -1,0 +1,3 @@
+MD5 edad0bd1abf80caaf672498e14ad8727 vmware-any-any-update105.tar.gz 296970
+RMD160 5da1b91c81ff1023c8f4dbc3ae02f7f180785e67 vmware-any-any-update105.tar.gz 296970
+SHA256 568939479294b4200e667ec0e3ad0d24f0e37356ccb3267b21de803530694426 vmware-any-any-update105.tar.gz 296970
