@@ -1,3 +1,0 @@
-MD5 8cba16d3f6b3723b43d555a5f7cbf850 vmware-any-any-update104.tar.gz 297243
-RMD160 426616f026de409ca057ec1a0913dc9b3d43ef03 vmware-any-any-update104.tar.gz 297243
-SHA256 c0a9efad2677e93ed914e296131916f8b316377644c5d8c716e6575cd58b3c69 vmware-any-any-update104.tar.gz 297243
