@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-modules/vmware-modules-1.0.0.11-r1.ebuild,v 1.1 2006/10/17 09:21:11 ikelos Exp $
 
 KEYWORDS="~amd64 ~x86"
 VMWARE_VER="VME_V452"
