@@ -1,9 +1,0 @@
-MD5 952408ff2b7482c6f4afcdaa2d46bd00 VMware-server-linux-client-1.0.1-29996.zip 23383483
-RMD160 8f1e22c487066fc23c1457953da566e504477df2 VMware-server-linux-client-1.0.1-29996.zip 23383483
-SHA256 bcb41c66c3016e54bba6399cf4b592161729eb5d88f65a3719daa227fb3d62a8 VMware-server-linux-client-1.0.1-29996.zip 23383483
-MD5 062f83a22822b6e4d4a176e3648c38d8 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
-RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
-SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
-MD5 913acecb0f79113de958e6a70618be7f vmware-libssl.so.0.9.7l.tar.bz2 78244
-RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 vmware-libssl.so.0.9.7l.tar.bz2 78244
-SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089 vmware-libssl.so.0.9.7l.tar.bz2 78244
