@@ -1,15 +1,0 @@
-MD5 9846bff6c3c8af97d4e3ae2700f8dd3a VMware-server-1.0.1-29996.tar.gz 105500734
-RMD160 f4d5805a230afd45ee2234065ffc7c172dd12e18 VMware-server-1.0.1-29996.tar.gz 105500734
-SHA256 08cfa19d9e5475fdaf12114d99bdeecacfd703dd3ec129958bf6f7e98d11641b VMware-server-1.0.1-29996.tar.gz 105500734
-MD5 8cba16d3f6b3723b43d555a5f7cbf850 vmware-any-any-update104.tar.gz 297243
-RMD160 426616f026de409ca057ec1a0913dc9b3d43ef03 vmware-any-any-update104.tar.gz 297243
-SHA256 c0a9efad2677e93ed914e296131916f8b316377644c5d8c716e6575cd58b3c69 vmware-any-any-update104.tar.gz 297243
-MD5 062f83a22822b6e4d4a176e3648c38d8 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
-RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
-SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12 vmware-libcrypto.so.0.9.7l.tar.bz2 412159
-MD5 913acecb0f79113de958e6a70618be7f vmware-libssl.so.0.9.7l.tar.bz2 78244
-RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 vmware-libssl.so.0.9.7l.tar.bz2 78244
-SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089 vmware-libssl.so.0.9.7l.tar.bz2 78244
-MD5 e494568dd025080cc80e7ad801f0b743 vmware-server-perl-fixed-rpath-libs.tar.bz2 73834
-RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 vmware-server-perl-fixed-rpath-libs.tar.bz2 73834
-SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b vmware-server-perl-fixed-rpath-libs.tar.bz2 73834
