@@ -2,6 +2,10 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  15 Nov 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
+  Brought the overlay back in sync with the main tree for vmware-modules and vmware-server{-console}.
+  Also updated to vmware-any-any105 for testing.
+
   30 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   -app-emulation/vmware-modules/vmware-modules-1.0.0.8.ebuild:
   Removed vmware-modules-0.0.8 since we no longer support VMware Workstation
